Laid out some basic foundations for the the history & settings tabs. Created model for attempts

--- a/WordleClone/WordleClone.csproj
+++ b/WordleClone/WordleClone.csproj
@@ -8,9 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
-    <Folder Include="Views\Controls\" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
 
 </Project>
